--- a/src/components/user/car-details/carDetail1.scss
+++ b/src/components/user/car-details/carDetail1.scss
@@ -213,6 +213,16 @@
       padding: 15px;
       height: 500px;
     }
+    h3 {
+      flex: 1;
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      transform: translateY(-50%);
+      color: #9e9fab;
+    }
   }
   .flex-half ~ .flex-half {
     padding-left: 30px;
