--- a/src/components/user/car-management/_carManagement.scss
+++ b/src/components/user/car-management/_carManagement.scss
@@ -69,10 +69,10 @@
           margin-right: 6px;
         }
         .acl-permission-raise {
-          background-color: #888888;
+          background-color: #3c3f52;
           border: none;
           border-radius: 4px;
-          color: #ffffff;
+          color: #b7b7b7;
           font-size: 15px;
           padding: 4px 12px;
         }
