--- a/src/components/user/car-details/carDetail1.scss
+++ b/src/components/user/car-details/carDetail1.scss
@@ -226,7 +226,7 @@
   }
   .flex-half ~ .flex-half {
     padding-left: 30px;
-    display: none;
+    // display: none;
   }
   .video-js {
     width: 100% !important;
