--- a/src/components/video-control-bar/VideoControlBar.scss
+++ b/src/components/video-control-bar/VideoControlBar.scss
@@ -1,7 +1,7 @@
 .mainCtrl {
   .custom-control-bar {
-    pointer-events: none;
-    opacity: 0.3;
+    // pointer-events: none;
+    // opacity: 0.3;
   }
 }
 .custom-control-bar {
@@ -91,15 +91,13 @@
     background: #000000;
     box-shadow: -1200px 0 0 1200px #c22e3c;
   }
-  // input[type="range"]::-webkit-slider-thumb {
-  //   -webkit-appearance: none !important;
-  //   background-color: #ffffff;
-  //   height: 25px;
-  //   width: 25px;
-  //   border-radius: 15px;
-  //   cursor: pointer;
-  //   box-shadow: -1600px 0 0 1600px green;
-  // }
+
+  .spinner-bg {
+    position: absolute;
+    img {
+      width: 25px;
+    }
+  }
 }
 
 /*Chrome*/
