--- a/theming/src/assets/scss/themes-variables/_blue-theme.scss
+++ b/theming/src/assets/scss/themes-variables/_blue-theme.scss
@@ -1,2 +1,4 @@
-$body-bg: #4d65db;
-$body-color: #ffffff;
+$blue: #4d65db !important;
+$blue-hover: #2d4ada !important;
+$body-bg: $blue;
+// $body-color: #ffffff;
