--- a/theming/src/assets/scss/_variables.scss
+++ b/theming/src/assets/scss/_variables.scss
@@ -2,3 +2,7 @@
 // $blue-theme: blue;
 // $white-theme: #ffffff;
 // $black-theme: #000000;
+$imgUrl: "./assets/images/";
+// $imgPath: blue;
+
+$box-padding-large: 30px;
